<resources>
    <string name="app_name">Pokemonchiki</string>
    <string name="pokemons">Pokemons</string>
    <string name="exit">Exit</string>
    <string name="pokemons_up_case">POKEMONS</string>
    <string name="likes_up_case">LIKES</string>
    <string name="pickachu">Pickachu</string>
    <string name="favorites">Favorites</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="dialog_ok">OK</string>
    <string name="about_info">This app is not created, approved, supported, or affiliated with Nintendo or Pokémon Company. \n\nThe project is developed with the support of the free Pokemon API.</string>
    <string name="sorted">Sorted</string>
    <string name="search">Search</string>
    <string name="id_no_information_available">Id: No information available</string>
    <string name="name_no_information_available">Name: No information available</string>
    <string name="supertype_no_information_available">Supertype: No information available</string>
    <string name="subtypes_no_information_available">Subtypes: No information available</string>
    <string name="hp_no_information_available">Hp: No information available</string>
    <string name="types_no_information_available">Types: No information available</string>
    <string name="evolves_no_information_available">Evolves: No information available</string>
    <string name="rules_no_information_available">Rules: No information available</string>
    <string name="number_no_information_available">Number of all: No information available</string>
    <string name="artist_no_information_available">Artist: No information available</string>
    <string name="rarity_no_information_available">Rarity: No information available</string>
    <string name="check_internet_connection">Check internet \nconnection. :(</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="empty">empty</string>
    <string name="you_didn_t_choose_pokemon">You didn\'t choose Pokemon :(</string>
    <string name="no_pokemons">No pokemons. :(</string>
    <string name="check_your_internet_connection">Check your internet connection..</string>
    <string name="favorites_caps">FAVORITES</string>
    <string name="health_text">HEALTH</string>
    <string name="names_text">NAMES</string>
    <string name="latest_text">LATEST</string>
</resources>