<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_card_10dp"
            android:src="@drawable/pikachu" />

        <TextView
            android:id="@+id/tvId"
            style="@style/StyleFieldsTextView"
            android:layout_marginTop="@dimen/margin_top_direction"
            android:text="@string/id_no_information_available" />

        <TextView
            android:id="@+id/tvName"
            style="@style/StyleFieldsTextView"
            android:text="@string/name_no_information_available" />

        <TextView
            android:id="@+id/tvSupertype"
            style="@style/StyleFieldsTextView"
            android:text="@string/supertype_no_information_available" />

        <TextView
            android:id="@+id/tvHp"
            style="@style/StyleFieldsTextView"
            android:text="@string/hp_no_information_available" />

        <TextView
            android:id="@+id/tvArtist"
            style="@style/StyleFieldsTextView"
            android:text="@string/artist_no_information_available" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</merge>